fix(core): menu, dropdown alignments
- fix select padding vqa
- fix content alignemnts in menu container

--- a/projects/elements/src/dropdown/dropdown.css
+++ b/projects/elements/src/dropdown/dropdown.css
@@ -67,6 +67,5 @@ mlv-icon-button {
 }
 
 ::slotted(mlv-menu) {
-  margin: calc(var(--mlv-ref-size-400) * -1);
   --width: 100%;
 }
